--- a/README
+++ b/README
@@ -63,10 +63,11 @@ if you don't want ALUGrid to be installed into the default directory
 (Remark) On Mac OS X add the following to your configure call (if you
 want to use a special compiler version, say version 4.2): 
 
-./configure LD=g++-4.2 CXX=g++-4.2 CC=gcc-4.2 F77=gfortran-4,2
+./configure LD=g++-4.2 CXX=g++-4.2 CC=gcc-4.2 
 
 This will ensure that the same g++ version is used for compilation 
-and for linking. 
+and for linking. Note that the C compiler is only needed for detection
+of the METIS and PARTY libraries.  
 
 
 After configuration
