--- a/AUTHORS
+++ b/AUTHORS
@@ -4,8 +4,9 @@
 
   Copyright (C) 1998 - 2002 Bernhard Schupp
   Copyright (C) 1998 - 2002 Mario Ohlberger 
-  Copyright (C) 2004 - 2010 Robert Kloefkorn
-  Copyright (C) 2005 - 2008 Andreas Dedner
+  Copyright (C) 2004 - 2011 Robert Kloefkorn
+  Copyright (C) 2005 - 2011 Andreas Dedner
+  Copyright (C) 2010 - 2011 Martin Nolte
 
   The ALUGrid library is free software; you can redistribute it and/or 
   modify it under the terms of the GNU General Public License as 
