--- a/TODO
+++ b/TODO
@@ -1,7 +1,9 @@
 B: Parallelisierung unabhaengig vom Gitter aufbauen mit ParMetis
 C: Einlesen des Makrogitters flexibler gestallten - keine Orientierung
-   und festes Makroelement vorschreiben
-D: Konforme Bisektion eibauen
+   und festes Makroelement vorschreiben (waere sicher gut)
+D: Konforme Bisektion eibauen (in Arbeit)
+F: vertex identifier auf von int auf IdType oder so umbauen, damit eventuell 
+   long verwendet werden kann.
 
 E: Spezielle Verfeinerungsregel fuer Geisterelemente welche statt 8 nur 4
 Kinder anlegt. 
