--- a/AUTHORS
+++ b/AUTHORS
@@ -3,17 +3,17 @@
   computations including dynamic load balancing.
 
   Copyright (C) 1998 - 2002 Bernhard Schupp
-  Copyright (C) 1998 - 2002 Mario Ohlberger 
-  Copyright (C) 2004 - 2011 Robert Kloefkorn
-  Copyright (C) 2005 - 2011 Andreas Dedner
-  Copyright (C) 2010 - 2011 Martin Nolte
+  Copyright (C) 1998 - 2002 Mario Ohlberger
+  Copyright (C) 2004 - 2012 Robert Kloefkorn
+  Copyright (C) 2005 - 2012 Andreas Dedner
+  Copyright (C) 2010 - 2012 Martin Nolte
 
-  The ALUGrid library is free software; you can redistribute it and/or 
-  modify it under the terms of the GNU General Public License as 
-  published by the Free Software Foundation; either version 2 of 
+  The DUNE ALUGrid module is free software; you can redistribute it and/or
+  modify it under the terms of the GNU General Public License as
+  published by the Free Software Foundation; either version 2 of
   the License, or (at your option) any later version.
 
-  The ALUGrid library is distributed in the hope that it will be useful, 
+  The ALUGrid library is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
   GNU General Public License for more details.
