--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
-  ALUGrid - a library providing a mesh manager supporting simplicial
-  and hexahedral meshes, local grid adaptivity for use in parallel
-  computations including dynamic load balancing.
+  DUNE-ALUGrid - a DUNE module providing a mesh manager supporting 
+  simplicial and hexahedral meshes, local grid adaptivity for 
+  use in parallel computations including dynamic load balancing.
 
   Copyright (C) 1998 - 2002 Bernhard Schupp
   Copyright (C) 1998 - 2002 Mario Ohlberger
@@ -8,12 +8,12 @@
   Copyright (C) 2005 - 2014 Andreas Dedner
   Copyright (C) 2010 - 2014 Martin Nolte
 
-  The DUNE ALUGrid module is free software; you can redistribute it and/or
+  The DUNE-ALUGrid module is free software; you can redistribute it and/or
   modify it under the terms of the GNU General Public License as
   published by the Free Software Foundation; either version 2 of
   the License, or (at your option) any later version.
 
-  The ALUGrid library is distributed in the hope that it will be useful,
+  The DUNE-ALUGrid library is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
   GNU General Public License for more details.
